--- a/index.html
+++ b/index.html
@@ -27,12 +27,15 @@
         <div class="formgroup">
            <div class="formgroup">
              
-            <label for="rate">Email : </label>
+            <label for="rate">Rate : </label>
             <input type="range" name="rate" id="rate" min="0" max="100">
        
         </div>
         </div>
         <button class="btnn" type="submit">Submit</button>
     </form>
+    <footer>
+        <p>&copy;Design by Majid</p>
+    </footer>
 </body>
 </html>
