--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <title>Form Survey</title>
 </head>
 <body>
+    <main>
+         <h2>Survey Form</h2>
+    
     <form class="survey">
-        <h2>Survey Form</h2>
+       
         <div class="formgroup">
             <label for="name">Name : </label>
             <input type="text" name="name" id="name" required>
@@ -34,6 +37,7 @@
         </div>
         <button class="btnn" type="submit">Submit</button>
     </form>
+    </main>
     <footer>
         <p>&copy;Design by Majid</p>
     </footer>
