--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </form>
     </main>
     <footer>
-        <p>&copy;Design by Majid</p>
+        <p>&copy;Design by <a href="https://github.com/majidlive1989">Majid</a></p>
     </footer>
 </body>
 </html>
